guns-db-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: gunsdb
  labels:
    app: mysql
    role: gunsroledb
    version: v1
spec:
  containers:
    - name: database
      image: srinivasbv22/gunsmysql
      ports:
        - containerPort: 3306
      volumeMounts:
        - name: db-database
          mountPath: /var/lib/mysql
  nodeSelector:
        zone: 'b'	  
  volumes:
  - name: db-database
    hostPath:
      path: /var/lib/data_storage
      type: DirectoryOrCreate
