guns-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    role: gunsroledb
spec:
  selector:
    role: gunsroledb
  ports:
    - port: 3306
      targetPort: 3306
  type: NodePort
