guns-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gunsui
  labels:
    role: gunsroleui
spec:
  selector:
    role: gunsroleui
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30000
  type: NodePort
